Content Updates and fixed light/dark mode issues

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
   justify-content: space-evenly;
 }
 
+.button {
+  background-color: #000000;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -207,7 +211,8 @@
   position: absolute;
   width: 3px;
   /* background-color:#198754; */
-  background-image: linear-gradient(#dc3545, #198754, #198754, #242424);
+  /* background-image: linear-gradient(#dc3545, #198754, #198754, #242424); */
+  background-image: linear-gradient(#198754, #198754, #242424);
   top: 0;
   bottom: 0;
   left: 73px;
